--- a/webapp/src/app/pacman-features/secondary-components/policy-violation-desc/policy-violation-desc.component.html
+++ b/webapp/src/app/pacman-features/secondary-components/policy-violation-desc/policy-violation-desc.component.html
@@ -23,7 +23,7 @@
     </div>
     <div class="policy-violation-label flex flex-col" *ngIf="violationId">
         <div class="policy-violation-label-header capitalize">
-            violation ID</div>
+            Violation ID</div>
         <div class="policy-violation-label-content" [title]="violationId">{{violationId}}
         </div>
     </div>
