--- a/webapp/src/app/pacman-features/secondary-components/aws-resource-details/aws-resource-details.component.css
+++ b/webapp/src/app/pacman-features/secondary-components/aws-resource-details/aws-resource-details.component.css
@@ -135,7 +135,7 @@ app-inventory-container{
 }
 
 ::ng-deep .mat-form-field-wrapper {
-  padding-bottom: 0px;
+  padding-bottom: 0px !important;
 }
 
 .mat-form-field{
