--- a/webapp/src/app/post-login-app/common/header/header.component.html
+++ b/webapp/src/app/post-login-app/common/header/header.component.html
@@ -15,6 +15,7 @@
     <div class="header-user-wrapper flex">
         <mat-icon
             class="header-user-notification material-icons-outlined"
+            title="Notifications"
             [ngClass]="{ active: haveNewNotification }"
             (click)="openNotification()"
         >
