feat: developed asset group screen

--- a/webapp/src/app/shared/input-field/input-field.component.css
+++ b/webapp/src/app/shared/input-field/input-field.component.css
@@ -10,3 +10,7 @@
   .input-wrapper ::ng-deep .mat-form-field{
     width: 100% !important;
   }
+
+  .input-wrapper ::ng-deep .mat-form-field-wrapper{
+    padding: 0px;
+  }
