--- a/webapp/src/styles.css
+++ b/webapp/src/styles.css
@@ -199,9 +199,8 @@ h5 {
 }
 
 h6 {
-  font-size: 1em;
-  font-family: ex2-medium;
-  letter-spacing: 0.1px;
+  font: var(--text-headline-6);
+  color: var(--text-high-emphasis);
 }
 
 b {
@@ -1966,4 +1965,58 @@ g.arc .bubble-text {
 .validation-error-message{
   padding: 10px 0px;
   color: red;
+}
+
+.page-layout{
+  padding: 28px;
+  height: 100%;
+}
+
+.page{
+  background-color: var(--background-white);
+  padding: 40px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.stepper-right-wrapper{
+  display: flex;
+  flex-direction: column;
+  width: calc(100% - 200px);
+  padding-left:24px;
+  overflow: scroll;
+  }
+
+.button-wrapper{
+  padding-top: 24px;
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+}
+
+.button-wrapper .button {
+  display: flex;
+  flex-direction: row;
+  padding: 8px 16px;
+  font: var(--text-body-2);
+  border-radius: 4px;
+  flex: none;
+  order: 1;
+  flex-grow: 0;
+  border: none;
+}
+
+.stepper{
+  height: 100%;
+}
+
+.next-btn,.submit-button{
+  color: white; 
+  background: var(--primary-400);
+}
+
+.back-btn{
+  color: var(--primary-400);
+  background-color: var(--background-white);
 }
