--- a/webapp/src/app/shared/table/table.component.html
+++ b/webapp/src/app/shared/table/table.component.html
@@ -28,7 +28,7 @@
 
                     <input type="search" matInput [(ngModel)]="searchQuery" (keyup)="handleSearch($event)"
                         placeholder="Search" class="search-bar-cursor" />
-                  
+
                     <!-- <div class="search-in-columns" matSuffix>
                         <mat-form-field>
                             <mat-select [formControl]="searchInColumns" multiple>
@@ -83,8 +83,8 @@
                 <span >{{totalRows}} Results</span>
             </div>
             <div class="header-right flex flex-row">
-                
-                
+
+
                 <div *ngIf="showMoreMenu" class="more-wrapper">
                     <img mat-button [matMenuTriggerFor]="menu" src="/assets/icons/three-dots.svg" alt="">
                     <mat-menu #menu="matMenu">
@@ -119,7 +119,7 @@
                     <span> {{ column!='Actions' && column!='DetailsBtn'?column:'' }} </span>
                     <img *ngIf="column!='Actions'" [class.rotate-180]="headerColName==column && direction=='asc'" height="12" width="12" style="padding: 2px;" src="/assets/icons/arrow-down-2.svg" alt="">
                 </th>
-                <td [style.width]="columnWidths[column]*screenWidthFactor+'px'" (click)="handleClick(element, column)" class="capitalize" mat-cell *matCellDef="let element"> 
+                <td [style.width]="columnWidths[column]*screenWidthFactor+'px'" (click)="handleClick(element, column)" class="capitalize" mat-cell *matCellDef="let element" [class.center]="element[column].isCentered">
                     <div *ngIf="element[column] && element[column].isMenuBtn; else clickable" style="text-align: center;">
                         <img class="pointer menu-btn" *ngIf="element[column].menuItems.length>0" mat-button [matMenuTriggerFor]="actionMenu" src="/assets/icons/three-dots.svg" alt="">
                         <mat-menu #actionMenu="matMenu">
@@ -139,7 +139,7 @@
                             <ng-template #textImageData>
                                 <div *ngIf="element[column] && (element[column].valueText || element[column].valueText===0); else noData" [class.row-title]="element[column].isLink" class="nowrap-ellipsis gap-4" [class.pointer]="element[column].link" [title]="element[column].titleText">
                                     <img *ngIf="element[column].imgSrc" [class.noImg]="element[column].imgSrc=='noImg'" style="vertical-align: text-bottom; padding-right: 8px; height: 16px"
-                                         src="/assets/icons/{{element[column].imgSrc}}.svg"> 
+                                         src="/assets/icons/{{element[column].imgSrc}}.svg">
                                     <span *ngIf="element[column].text || element[column].text==0">{{ element[column].text }} </span>
                                     <div *ngIf="element[column].symbol" class="symbol" [class]="element[column].symbol.type" [style.background-color]="element[column].symbol.type!='triangle'?element[column].symbol.color:''" [style.border-bottom-color]="element[column].symbol.type=='triangle'?element[column].symbol.color:''"></div>
                                 </div>
@@ -155,7 +155,14 @@
                 </td>
             </ng-container>
             <tr mat-header-row *matHeaderRowDef="whiteListColumns; sticky: true"></tr>
-            <tr [class.row-hover]="rowClickable" mat-row *matRowDef="let row; columns: whiteListColumns;"></tr>
+                <tr
+                    [class.row-hover]="rowClickable"
+                    [class.md]="rowSize === 'MD'"
+                    [class.sm]="rowSize === 'SM'"
+                    [class.lg]="rowSize === 'LG'"
+                    mat-row
+                    *matRowDef="let row; columns: whiteListColumns"
+                ></tr>
         </table>
     </div>
     </div>
